<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.kkccbd.QuizA">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/quizAMain"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/my_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/quiz_main"
        android:src="@mipmap/orange" />

    <TextView
        android:id="@+id/quizAText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:gravity="center_horizontal"
        android:text="@string/quiza_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Time"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/quiza_text" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/quizrec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quizAMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/recorder"
        app:backgroundTint="@color/floatingbar" />

    <TextView
        android:id="@+id/qRectext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quizrec"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/startrec"
        android:textColor="@color/white"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/quizAScore"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
